k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: job-aggregator
  labels:
    app: job-aggregator

spec:
  replicas: 2

  revisionHistoryLimit: 5

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: job-aggregator

  template:
    metadata:
      labels:
        app: job-aggregator

    spec:
      terminationGracePeriodSeconds: 30

      containers:
        - name: job-aggregator

          # Image publiée sur Docker Hub
          # À mettre à jour à chaque nouvelle release
          image: saliha91700/job-aggregator:v1.3.0

          # Toujours vérifier si une nouvelle image existe
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8000

          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
